--- a/src/app/datewiseinvoice/datewiseinvoice.component.html
+++ b/src/app/datewiseinvoice/datewiseinvoice.component.html
@@ -1,36 +1,4 @@
-<!-- 
-                      <form  [formGroup]="dateForm" autocomplete="off">
-
-
-                        <mat-form-field appearance="outline" class="example-full-width">                        
-                              <mat-label>Choose a date</mat-label>
-                              <input matInput formControlName="date" [matDatepicker]="picker">
-                              <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-                              <mat-datepicker #picker></mat-datepicker>                          
-                        </mat-form-field>
-                        </form>
-                        <div class="example-button-row">                      
-                          <button mat-raised-button (click)="onSubmit()" color="primary">get</button>
-                        </div> -->
-  
-  
-  
-                        <!-- <form  [formGroup]="monthandyearForm" autocomplete="off">
-                          <mat-form-field appearance="fill">
-                          <mat-label>Month & Year</mat-label>
-                          <mat-select formControlName="monyeardate">
-                            <mat-option *ngFor="let item of array_mon_year" [value]="item">
-                              {{item.month}} | {{item.year}}
-                            </mat-option>
-                          </mat-select>
-                        </mat-form-field>
-                        </form>
-                        
-                        <div class="example-button-row">                      
-                          <button mat-raised-button (click)="monyear()" color="primary">get1</button>
-                        </div>
-   -->
-                        
+           
                         <div class="container-fluid">
                            <div class="row"> 
                              <div class="col-sm-12">
@@ -87,7 +55,7 @@
                       <ng-container matColumnDef="print">
                         <th mat-header-cell *matHeaderCellDef> Print </th>
                         <td mat-cell *matCellDef="let producttable;let i = index;">
-                          <mat-icon >print</mat-icon>
+                          <mat-icon (click)="datewiseforproduct(producttable);" >print</mat-icon>
                         </td>
                         <td mat-footer-cell *matFooterCellDef>  </td>
                       </ng-container>
@@ -211,7 +179,7 @@
                       <ng-container matColumnDef="print">
                         <th mat-header-cell *matHeaderCellDef> Print </th>
                         <td mat-cell *matCellDef="let producttable;let i = index;">
-                          <mat-icon >print</mat-icon>
+                          <mat-icon (click)="datewiseforproduct(producttable);">print</mat-icon>
                         </td>
                         <td mat-footer-cell *matFooterCellDef>  </td>
                       </ng-container>
