--- a/src/app/includedgstbillpage/includedgstbillpage.component.html
+++ b/src/app/includedgstbillpage/includedgstbillpage.component.html
@@ -81,7 +81,7 @@
              <label class="text-right" for="cus_address">Customer Name:&nbsp;<b>{{api.billingarray_incgst.customerdetails.customername || "xxx"}}</b></label><br>
             <label  for="cus_address">Phone Number:&nbsp;<b>{{api.billingarray_incgst.customerdetails.phoneumber || "xxx"}}</b></label><br>
             <label  for="cus_address">Address:&nbsp;<b>{{api.billingarray_incgst.customerdetails.address || "xxx"}}</b></label><br>
-            <label  for="invoice">Party's GSTIN: &nbsp;<b>{{api.billingarray_sareeprod.customerdetails.partygstin || 'XXX'}}</b></label>
+            <label  for="invoice">Party's GSTIN: &nbsp;<b>{{this.api.billingarray_incgst.customerdetails.partygstin || 'XXX'}}</b></label>
           </div>
       </div>
           <!-- <div class="col-sm-6">                    
