--- a/src/app/datewiseinvoice/datewiseinvoice.component.html
+++ b/src/app/datewiseinvoice/datewiseinvoice.component.html
@@ -179,7 +179,7 @@
                       <ng-container matColumnDef="print">
                         <th mat-header-cell *matHeaderCellDef> Print </th>
                         <td mat-cell *matCellDef="let producttable;let i = index;">
-                          <mat-icon (click)="datewiseforproduct(producttable);">print</mat-icon>
+                          <mat-icon (click)="datewiseforsareeproduct(producttable);">print</mat-icon>
                         </td>
                         <td mat-footer-cell *matFooterCellDef>  </td>
                       </ng-container>
