--- a/src/app/monthandyearwiseinvoice/monthandyearwiseinvoice.component.html
+++ b/src/app/monthandyearwiseinvoice/monthandyearwiseinvoice.component.html
@@ -53,13 +53,13 @@
 <table mat-table [dataSource]="dataSource" matSort>                                
 
 
-<ng-container matColumnDef="print">
+<!-- <ng-container matColumnDef="print">
  <th mat-header-cell *matHeaderCellDef> Print </th>
  <td mat-cell *matCellDef="let producttable;let i = index;">
    <mat-icon >print</mat-icon>
  </td>
  <td mat-footer-cell *matFooterCellDef>  </td>
-</ng-container>
+</ng-container> -->
 
 <ng-container matColumnDef="position">
    <th mat-header-cell *matHeaderCellDef> No. </th>
@@ -177,14 +177,14 @@
 <div class="example-container mat-elevation-z8">
 <table mat-table [dataSource]="dataSource2" matSort>                                
 
-
+<!-- 
 <ng-container matColumnDef="print">
  <th mat-header-cell *matHeaderCellDef> Print </th>
  <td mat-cell *matCellDef="let producttable;let i = index;">
    <mat-icon >print</mat-icon>
  </td>
  <td mat-footer-cell *matFooterCellDef>  </td>
-</ng-container>
+</ng-container> -->
 
 <ng-container matColumnDef="position">
    <th mat-header-cell *matHeaderCellDef> No. </th>
