--- a/src/app/monthandyearwiseinvoice/monthandyearwiseinvoice.component.html
+++ b/src/app/monthandyearwiseinvoice/monthandyearwiseinvoice.component.html
@@ -22,7 +22,12 @@
                  </div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                  <div class="form-group">
                    <!-- <div class="example-button-row">                       -->
-                    <button mat-raised-button (click)="onSubmit()" color="primary">Get</button>
+                    <button mat-raised-button (click)="onSubmit()" color="primary">Get</button>&nbsp;&nbsp;&nbsp;&nbsp;
+                    <button *ngIf="invoice_product_month_year_csv_includedgst.length != 0" mat-raised-button (click)="productincludedgstcsv()" color="primary">Download Csv Inc</button>&nbsp;&nbsp;&nbsp;&nbsp;
+                    <button *ngIf="invoice_product_month_year_csv_nonincludedgst.length != 0" mat-raised-button (click)="productnonincludedgstcsv()" color="primary">Download Csv NON Inc</button>&nbsp;&nbsp;&nbsp;&nbsp;
+                    <button *ngIf="invoice_product_month_year_csv_includedgst_both.length != 0" mat-raised-button (click)="productbothcsv()" color="primary">Download Csv BOTH</button>&nbsp;&nbsp;&nbsp;&nbsp;
+                  
+
                     <!-- </div> -->
                  </div>
                    </form>
@@ -47,8 +52,11 @@
  <mat-label>Search</mat-label>
  <input matInput (keyup)="applyFilter($event)" #input>
 </mat-form-field>     
-<mat-label *ngIf='dataSource.data.length != 0 '>Total Records :{{dataSource.data.length}}</mat-label>         
- </form>                      
+<mat-label *ngIf='dataSource.data.length != 0 '>Total Records :<span style="font-size: large;color: red;">{{dataSource.data.length}}</span></mat-label>&nbsp;&nbsp;&nbsp;&nbsp;         
+<mat-label *ngIf='dataSource.data.length != 0 '>Total Records of Included :<span style="font-size: large;color: red;">{{invoice_product_month_year_csv_includedgst.length}}</span></mat-label>&nbsp;&nbsp;&nbsp;&nbsp;         
+<mat-label *ngIf='dataSource.data.length != 0 '>Total Records of NonIncluded :<span style="font-size: large;color: red;">{{invoice_product_month_year_csv_nonincludedgst.length}}</span></mat-label>         
+
+</form>                      
 <div class="example-container mat-elevation-z8">
 <table mat-table [dataSource]="dataSource" matSort>                                
 
