--- a/src/app/includedgstbillpage/includedgstbillpage.component.html
+++ b/src/app/includedgstbillpage/includedgstbillpage.component.html
@@ -69,8 +69,7 @@
           <label  class="text-left form-control" for="invoice">Invoice No: &nbsp;<b>{{api.billingarray_incgst.invoiceno || 'xxx'}}</b></label>
           <label  class="text-left form-control" for="invoice">Invoice Date: &nbsp;<b>{{api.billingarray_incgst.invoicedate || 'xxx'}}</b></label>
           <label  class="text-left form-control" for="invoice">State & Code: &nbsp;<b>{{'TamilNadu & 33'}}</b></label>
-         
-
+          <label *ngIf="api.billingarray_incgst.onegramsilverrate.length != 0"   class="text-left form-control"  for="invoice">Silver Rate For 1 gram: &nbsp;<b>{{api.billingarray_incgst.onegramsilverrate }}</b></label>
 
       </div>
           </div>
