--- a/src/app/nonincludedgst/nonincludedgst.component.html
+++ b/src/app/nonincludedgst/nonincludedgst.component.html
@@ -68,7 +68,7 @@
                     </mat-form-field>
                     <mat-form-field appearance="outline"  class="example-full-width">
                       <mat-label>Enter One Gram Silver Rate</mat-label>
-                      <input matInput type="number" [(ngModel)]="onegramsilverModel" autocomplete="off" [ngModelOptions]="{standalone: true}" >  
+                      <input matInput type="number" [(ngModel)]="onegramNgModel" autocomplete="off" [ngModelOptions]="{standalone: true}" >  
                     </mat-form-field>
                   </div>
                   <div class="col-sm-4">
