--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,7 +32,7 @@
         <mat-icon>receipt</mat-icon>
         <span>Not Included GST</span>
       </button>
-      <button mat-menu-item routerLink="/sareebill">
+      <!-- <button mat-menu-item routerLink="/sareebill">
         <mat-icon>print</mat-icon>
         <span>Saree Bill Print</span>
       </button>
@@ -43,7 +43,7 @@
       <button mat-menu-item routerLink="/nonincludedgstbillpage">
         <mat-icon>print</mat-icon>
         <span> Non Included Gst Bill Print</span>
-      </button>
+      </button> -->
       <button mat-menu-item routerLink="/invoicemonthandyearwise">
         <mat-icon>print</mat-icon>
         <span>Month & Year</span>
