--- a/src/app/nonincludedgstbillpage/nonincludedgstbillpage.component.html
+++ b/src/app/nonincludedgstbillpage/nonincludedgstbillpage.component.html
@@ -1,5 +1,6 @@
+<button type="button" class="btn btn-primary" [useExistingCss]="true"  printSectionId="example"  ngxPrint>Print</button>
 
-<button type="button" class="btn btn-primary" (click)="printdata();">Print</button>
+<!-- <button type="button" class="btn btn-primary" (click)="printdata();">Print</button> -->
 
 <div id="example" style="margin:0px 6px 0px 6px;">
     <br>
