--- a/src/app/nonincludedgst/nonincludedgst.component.css
+++ b/src/app/nonincludedgst/nonincludedgst.component.css
@@ -41,3 +41,14 @@
     margin: 8px 8px 8px 0;
   }
   
+  .cus td{
+    float: right;
+  }
+
+  .ng-autocomplete {
+    width:100%;
+    max-width: 600px;
+    display: table;
+    margin: 0 auto;
+  }
+  
